# challengeutils

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  README.html  README.md  challenge_utils.py  challengeutils.html  client.html  createChallenge.py  createChallengeWiki.command  docker_push.sh  genindex.html  index.html  mergeWiki.py  mirrorWiki.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  saveWikis.py  search.html  searchindex.js  setup.cfg  setup.py  writeUpAttacher.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
R/: challenge_analysis.Rmd
_modules/: index.html
_sources/: README.rst.txt  modules.rst.txt
_static/: documentation_options.js
about/: authors.html  changelog.html
archive-challenge-project-tool/: Dockerfile  challenge.py  challenge_config.py  challenge_eval.sh  lock.py  messages.py  readme.md  runTool.sh
challengeutils/: __init__.py  __main__.py  __version__.py  annotations.py  challenge.py  challenge_utils.py  cheat_detection.py  createChallenge.py  create_portal_challenge.py  createchallenge.py  discussion.py  dockertools.py  download_current_lead_submission.py  evaluation_queue.py  helpers.py  mirrorwiki.py  permissions.py  project_submission.py  query.py  readme.md  submission.py  synapse.py  teams.py  utils.py  validate_docker.py  wiki.py  writeup_attacher.py  writeups.py
client/: admin.html  overview.html  participant.html  source.html
demo/: challenge.html
docs/: README.rst  challengeutils.rst  client.rst  conf.py  index.rst  requirements.txt
dreamutils/: challenge_utils.py
python/: annotations.html  discussion.html  dockertools.html  evaluation_queues.html  helpers.html  permissions.html  submissions.html  teams.html  utils.html  wiki.html  (+1 more)
(+124 files in other folders)
