[metadata]
name = challengeutils
version = attr: challengeutils.__version__
description = Challenge utility functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sage-Bionetworks/challengeutils
author = Thomas Yu
author_email = thomas.yu@sagebionetworks.org
license = Apache
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
    Bug Tracker = https://github.com/Sage-Bionetworks/challengeutils/issues
    Source Code = https://github.com/Sage-Bionetworks/challengeutil
    Documentation = https://sage-bionetworks.github.io/challengeutils/

[options]
packages = find:
install_requires =
    pandas>=1.1.5
    requests
    synapseclient>=2.6.0
    tabulate>=0.9.0
    jellyfish>=0.9.0
    scipy>=1.10.1
python_requires = >3.6, <3.11
include_package_data = True
zip_safe = False
scripts =
    bin/runqueue.py

[options.entry_points]
console_scripts =
    challengeutils = challengeutils.__main__:main

[flake8]
max-line-length = 88
ignore =
    # space before : (needed for how black formats slicing)
    E203